--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ body {
   position: relative;
   width: 100%; }
 
-.post-template.tag-portfolio:not(.page-template) .author .author-image, .post-template:not(.page-template) .author .author-image {
+.post-template:not(.page-template) .author .author-image {
   border-radius: 50%;
   font-size: 0;
   height: 46px;
@@ -100,11 +100,11 @@ body {
   .post-template:not(.page-template) .author .author-image + .author-name {
     margin-left: 10px; }
 
-.post-template.tag-portfolio:not(.page-template) .author .author-name, .post-template:not(.page-template) .author .author-name {
+.post-template:not(.page-template) .author .author-name {
   font-size: 0.85rem;
   font-weight: 500;
   line-height: 23px; }
-  .post-template.tag-portfolio:not(.page-template) .author .author-name > span, .post-template:not(.page-template) .author .author-name > span {
+  .post-template:not(.page-template) .author .author-name > span {
     display: block;
     font-size: 0.7rem;
     font-weight: 300; }
@@ -555,25 +555,21 @@ pre[class*='language-'] {
   background: #efefe9; }
 
 .related-posts {
-  display: inline-block;
-  margin-right: -5px;
-  vertical-align: top;
   margin-top: 30px;
-  width: 50%; }
+  text-align: right;
+  width: 100%; }
   .related-posts > span {
     display: block;
     font-size: 0.7rem;
     font-weight: 300;
-    line-height: 23px; }
+    line-height: 23px;
+    margin-bottom: 5px; }
   .related-posts > a {
-    font-size: 0.7rem;
+    display: block;
+    font-size: 0.85rem;
     line-height: 23px; }
-    .related-posts > a::after {
-      content: ', '; }
-    .related-posts > a:last-of-type::after {
-      content: ''; }
 
-.post-template.tag-portfolio:not(.page-template) .share > a[class*='icon-'], .post-template:not(.page-template) .share > a[class*='icon-'] {
+.post-template:not(.page-template) .share > a[class*='icon-'] {
   display: inline-block;
   margin-right: -5px;
   vertical-align: top;
@@ -594,8 +590,8 @@ pre[class*='language-'] {
     background-image: url("../img/icon-twitter.svg"); }
   .post-template:not(.page-template) .share > a[class='icon-facebook'][class*='icon-'] {
     background-image: url("../img/icon-facebook.svg"); }
-  .post-template:not(.page-template) .share > a[class='icon-google-plus'][class*='icon-'] {
-    background-image: url("../img/icon-google-plus.svg"); }
+  .post-template:not(.page-template) .share > a[class='icon-googleplus'][class*='icon-'] {
+    background-image: url("../img/icon-googleplus.svg"); }
 
 .social-links {
   list-style: none; }
@@ -644,7 +640,7 @@ a[class='twitter'] {
 a[class='dribbble'] {
   background-image: url("../img/icon-dribbble.svg"); }
 
-.about-content > .post, .post-template.tag-portfolio:not(.page-template) article, .post-template:not(.page-template) article, article.thought {
+.about-content > .post, .post-template:not(.page-template) article, article.thought {
   max-width: 850px;
   padding: 30px 0;
   width: 100%; }
@@ -777,20 +773,18 @@ h6 {
     top: 50px; }
 
 .author-profile {
+  padding-bottom: 30px;
   position: relative; }
   .author-profile .author-image {
     animation: blured-out .999s ease-out forwards;
     font-size: 0;
     height: 66.66vw;
-    left: 0;
     margin-left: 0;
     max-height: 850px;
     max-width: 850px;
     overflow: hidden;
-    position: absolute;
-    top: 30px;
     width: 66.66vw;
-    z-index: 2; }
+    z-index: -1; }
     .author-profile .author-image > .img {
       background-position: center;
       background-repeat: no-repeat;
@@ -800,36 +794,29 @@ h6 {
       height: 100%;
       width: 100%; }
   .author-profile .author-block {
-    background-color: #f03246;
-    height: calc(66.66vw + 60px);
+    background-image: url("../img/dots-texture.png");
+    bottom: 0;
+    height: 33.33vw;
     margin-right: 0;
     max-width: 50%;
-    max-height: 910px;
+    max-height: 425px;
     padding-left: 16.66%;
-    position: relative;
+    position: absolute;
+    right: 0;
     width: 50vw;
     z-index: 1; }
-    .author-profile .author-block::after {
-      background-color: #223347;
-      content: '';
-      display: block;
-      height: 66.66%;
-      left: calc(33.33% + 50px);
-      position: absolute;
-      top: 0;
-      width: 9px;
-      z-index: -1; }
     .author-profile .author-block > section {
-      background-color: #f03246;
-      bottom: 0;
-      padding: 20px 20px 50px 50px;
-      position: absolute; }
+      background-color: white;
+      bottom: 30px;
+      padding: 20px;
+      position: absolute;
+      right: 0;
+      width: calc(66.66% - 30px); }
       .author-profile .author-block > section span {
         font-size: 1.5rem;
         font-weight: 400;
         line-height: 1.11em; }
       .author-profile .author-block > section h3 {
-        color: white;
         font-size: 2rem;
         font-weight: 400;
         line-height: 1.11em; }
@@ -837,7 +824,7 @@ h6 {
         line-height: 1.48em;
         margin: 10px auto; }
       .author-profile .author-block > section a {
-        color: white;
+        color: #f03246;
         font-size: 0.85rem;
         line-height: 2.96em; }
         .author-profile .author-block > section a:hover {
@@ -846,22 +833,34 @@ h6 {
           content: '»';
           margin-left: 10px; }
 
-.post-template.tag-portfolio:not(.page-template) .post-heading {
+.post-template:not(.page-template) .post-heading {
   max-width: 1280px;
-  padding-top: 30px; }
+  overflow: hidden;
+  margin-top: 30px;
+  min-height: 720px;
+  position: relative; }
+  .post-template:not(.page-template) .post-heading .post-title {
+    display: block;
+    font-size: 10vw;
+    line-height: 1;
+    padding-top: 50px;
+    position: relative;
+    text-align: left;
+    width: 100%;
+    z-index: 2; }
 
-.post-template.tag-portfolio:not(.page-template) .main-date {
+.post-template:not(.page-template) .main-date {
   display: inline-block;
   margin-right: -5px;
   vertical-align: top;
   font-size: 3.75rem;
   font-weight: 700;
-  height: 50vh;
+  height: 40vh;
   line-height: 1em;
   min-height: 500px;
   position: relative;
   width: 33.33%; }
-  .post-template.tag-portfolio:not(.page-template) .main-date::before {
+  .post-template:not(.page-template) .main-date::before {
     border-bottom: 10px solid #f03246;
     border-right: 10px solid #f03246;
     content: '';
@@ -870,7 +869,7 @@ h6 {
     position: absolute;
     top: 30px;
     width: calc(100% - 50px); }
-  .post-template.tag-portfolio:not(.page-template) .main-date::after {
+  .post-template:not(.page-template) .main-date::after {
     background-color: #223347;
     content: '';
     bottom: calc(3.75rem + 30px);
@@ -879,81 +878,129 @@ h6 {
     right: 60px;
     transform: rotate(-45deg);
     width: 180px; }
-  .post-template.tag-portfolio:not(.page-template) .main-date .mm,
-  .post-template.tag-portfolio:not(.page-template) .main-date .yy {
+  .post-template:not(.page-template) .main-date .mm,
+  .post-template:not(.page-template) .main-date .yy {
     display: block;
     position: absolute; }
-  .post-template.tag-portfolio:not(.page-template) .main-date .mm {
+  .post-template:not(.page-template) .main-date .mm {
     bottom: calc(3.75rem + 40px);
     right: 160px; }
-  .post-template.tag-portfolio:not(.page-template) .main-date .yy {
+  .post-template:not(.page-template) .main-date .yy {
     bottom: 20px;
     right: 80px; }
 
-.post-template.tag-portfolio:not(.page-template) .main-header {
+.post-template:not(.page-template) .main-header {
   display: inline-block;
   margin-right: -5px;
   vertical-align: top;
-  animation: blured-out .999s ease-out forwards;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 50vh;
+  height: 40vh;
   min-height: 500px;
+  padding: 30px 30px 0 0;
+  position: relative;
   width: 66.66%; }
+  .post-template:not(.page-template) .main-header::before {
+    background-image: url("../img/stripes-texture.png");
+    background-position: top -7px left;
+    content: '';
+    height: 100%;
+    position: absolute;
+    right: -50%;
+    top: -50%;
+    transform: rotate(-45deg);
+    width: 100%;
+    z-index: -1; }
+  .post-template:not(.page-template) .main-header::after {
+    background-color: #f03246;
+    content: '';
+    height: 100%;
+    mix-blend-mode: multiply;
+    position: absolute;
+    right: -40%;
+    top: -7%;
+    transform: rotate(-45deg);
+    width: 100%;
+    z-index: 1; }
+  .post-template:not(.page-template) .main-header .post-cover {
+    animation: blured-out .999s ease-out forwards;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: calc(40vh - 10px);
+    min-height: 470px;
+    width: 100%; }
 
-.post-template.tag-portfolio:not(.page-template) .site-wrapper {
+.post-template:not(.page-template) .site-wrapper {
   margin: 0;
   max-width: 100vw;
   min-height: calc(100vh - 40px);
   padding: 0; }
 
-.post-template.tag-portfolio:not(.page-template) .content {
+.post-template:not(.page-template) .content {
   animation: op-in .999s ease-out forwards;
   max-width: 1280px;
-  padding-bottom: 50px; }
+  padding-bottom: 50px;
+  padding-top: 30px;
+  position: relative; }
+  .post-template:not(.page-template) .content > aside {
+    position: absolute;
+    right: 0;
+    top: 50px; }
 
-.post-template.tag-portfolio:not(.page-template) article {
-  margin-left: 0; }
-  .post-template.tag-portfolio:not(.page-template) article .post-header {
+.post-template:not(.page-template) article {
+  margin-left: 0;
+  text-align: left;
+  width: 66.66%; }
+  .post-template:not(.page-template) article .post-header {
     text-align: left; }
+    .post-template:not(.page-template) article .post-header .post-date {
+      background-color: #223347;
+      color: white;
+      font-size: 0.85rem;
+      line-height: 1.11em;
+      padding: 0 10px; }
+      .post-template:not(.page-template) article .post-header .post-date::after {
+        content: '»';
+        margin-left: 5px; }
+    .post-template:not(.page-template) article .post-header .post-title {
+      font-size: 4rem;
+      font-weight: 500; }
 
-.post-template.tag-portfolio:not(.page-template) .post-content + .post-footer {
+.post-template:not(.page-template) .post-content + .post-footer {
   margin-top: 30px; }
 
-.post-template.tag-portfolio:not(.page-template) .author,
-.post-template.tag-portfolio:not(.page-template) .share {
-  display: inline-block;
-  margin-right: -5px;
-  vertical-align: top;
+.post-template:not(.page-template) .author,
+.post-template:not(.page-template) .share {
   margin-top: 30px;
-  width: 50%; }
+  width: 100%; }
 
-.post-template.tag-portfolio:not(.page-template) .author .author-image {
-  display: inline-block;
-  margin-right: -5px;
-  vertical-align: top; }
-
-.post-template.tag-portfolio:not(.page-template) .author .author-name {
-  display: inline-block;
-  margin-right: -5px;
-  vertical-align: top; }
-
-.post-template.tag-portfolio:not(.page-template) .share {
+.post-template:not(.page-template) .author {
   text-align: right; }
-  .post-template.tag-portfolio:not(.page-template) .share > span {
+  .post-template:not(.page-template) .author .author-image {
+    display: inline-block;
+    margin-right: -5px;
+    vertical-align: top; }
+  .post-template:not(.page-template) .author .author-name {
+    display: inline-block;
+    margin-right: -5px;
+    vertical-align: top;
+    text-align: left; }
+
+.post-template:not(.page-template) .share {
+  text-align: right; }
+  .post-template:not(.page-template) .share > span {
+    display: block;
     font-size: 0.7rem;
     font-weight: 300;
     line-height: 46px;
     margin-right: 10px; }
     @media (max-width: 640px) {
-      .post-template.tag-portfolio:not(.page-template) .share > span {
+      .post-template:not(.page-template) .share > span {
         display: block;
         line-height: 23px; } }
-  .post-template.tag-portfolio:not(.page-template) .share > a[class*='icon-'] {
+  .post-template:not(.page-template) .share > a[class*='icon-'] {
     margin-top: 7px; }
     @media (max-width: 640px) {
-      .post-template.tag-portfolio:not(.page-template) .share > a[class*='icon-'] {
+      .post-template:not(.page-template) .share > a[class*='icon-'] {
         margin-top: 0; } }
 
 .contact-content {
@@ -1066,69 +1113,82 @@ h6 {
       text-align: left;
       width: 66.66%; }
 
-.post-template:not(.page-template) .main-header {
-  animation: blured-out .999s ease-out forwards;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 50vh;
-  min-height: 450px; }
-  .post-template:not(.page-template) .main-header.no-cover {
-    height: 100px;
-    min-height: auto; }
+.post-template.tag-thoughts:not(.page-template) .post-heading {
+  min-height: auto; }
 
-.post-template:not(.page-template) .site-wrapper {
-  margin: 0;
-  max-width: 100vw;
-  min-height: calc(100vh - 40px);
-  padding: 0; }
+.post-template.tag-thoughts:not(.page-template) .main-info {
+  height: calc(100vh - 80px);
+  margin-left: 0;
+  min-height: 500px;
+  position: relative;
+  width: 66.66%; }
+  .post-template.tag-thoughts:not(.page-template) .main-info::before {
+    background-image: url("../img/dots-texture.png");
+    bottom: 0;
+    content: '';
+    height: 33.33%;
+    left: 0;
+    position: absolute;
+    width: 100%; }
 
-.post-template:not(.page-template) .content {
-  animation: op-in .999s ease-out forwards;
-  max-width: 1280px;
-  padding: 15px;
-  padding-bottom: 50px; }
+.post-template.tag-thoughts:not(.page-template) .post-date {
+  background-color: #223347;
+  color: white;
+  font-size: 0.85rem;
+  line-height: 1.11em;
+  padding: 0 10px; }
+  .post-template.tag-thoughts:not(.page-template) .post-date::after {
+    content: '»';
+    margin-left: 5px; }
 
-.post-template:not(.page-template) article .post-header {
-  text-align: left; }
+.post-template.tag-thoughts:not(.page-template) .post-title {
+  font-size: 4rem;
+  font-weight: 500; }
 
-.post-template:not(.page-template) .post-content + .post-footer {
-  margin-top: 30px; }
+.post-template.tag-thoughts:not(.page-template) .post-excerpt {
+  background-color: white;
+  bottom: 70px;
+  left: 30px;
+  padding: 20px;
+  position: absolute;
+  width: 50%;
+  z-index: 1; }
+  .post-template.tag-thoughts:not(.page-template) .post-excerpt::after {
+    content: '...';
+    margin-left: 5px; }
 
-.post-template:not(.page-template) .author,
-.post-template:not(.page-template) .share {
-  display: inline-block;
-  margin-right: -5px;
-  vertical-align: top;
-  margin-top: 30px;
-  width: 50%; }
+.post-template.tag-thoughts:not(.page-template) .post-cap {
+  bottom: -8rem;
+  color: #f03246;
+  font-size: 0;
+  font-weight: 300;
+  line-height: 1em;
+  position: absolute; }
+  .post-template.tag-thoughts:not(.page-template) .post-cap::first-letter {
+    font-size: 41rem; }
 
-.post-template:not(.page-template) .author .author-image {
-  display: inline-block;
-  margin-right: -5px;
-  vertical-align: top; }
+.post-template.tag-thoughts:not(.page-template) .main-header {
+  height: calc(100vh - 140px);
+  min-height: 500px;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50%;
+  z-index: -1; }
+  .post-template.tag-thoughts:not(.page-template) .main-header::before, .post-template.tag-thoughts:not(.page-template) .main-header::after {
+    display: none; }
+  .post-template.tag-thoughts:not(.page-template) .main-header .post-cover {
+    animation: blured-out .999s ease-out forwards;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: calc(100vh - 140px);
+    min-height: 500px;
+    width: 100%; }
 
-.post-template:not(.page-template) .author .author-name {
-  display: inline-block;
-  margin-right: -5px;
-  vertical-align: top; }
-
-.post-template:not(.page-template) .share {
-  text-align: right; }
-  .post-template:not(.page-template) .share > span {
-    font-size: 0.7rem;
-    font-weight: 300;
-    line-height: 46px;
-    margin-right: 10px; }
-    @media (max-width: 640px) {
-      .post-template:not(.page-template) .share > span {
-        display: block;
-        line-height: 23px; } }
-  .post-template:not(.page-template) .share > a[class*='icon-'] {
-    margin-top: 7px; }
-    @media (max-width: 640px) {
-      .post-template:not(.page-template) .share > a[class*='icon-'] {
-        margin-top: 0; } }
+.post-template.tag-thoughts:not(.page-template) .content > aside {
+  top: 80px; }
 
 .tag-aside {
   display: inline-block;
