--- a/assets/sass/sections/case/_index.scss
+++ b/assets/sass/sections/case/_index.scss
@@ -5,77 +5,58 @@
 
 // General
 // -----------------------------------------------------------------------------
-.post-template:not(.page-template) {
-  .post-heading {
-    max-width: $site-box;
-    overflow: hidden;
-    margin-top: $distance * 3;
-    min-height: 720px;
+.post-template.tag-portfolio:not(.page-template) {
+  .main-info-p {
+    margin-left: 0;
+    min-height: 260px;
+    padding: $distance * 2 0;
     position: relative;
+    width: 100%;
 
-    // Title
-    .post-title {
-      display: block;
-      font-size: 10vw;
-      line-height: 1;
-      padding-top: $distance * 5;
-      position: relative;
-      text-align: left;
-      width: 100%;
-      z-index: 2;
-    }
-  }
-
-// Big date widget
-// -----------------------------------------------------------------------------
-  .main-date {
-    @include inline-block;
-    font-size: 3.75rem;
-    font-weight: $bold;
-    height: 40vh;
-    line-height: 1em;
-    min-height: 500px;
-    position: relative;
-    width: 33.33%;
-
-    // Color border
     &::before {
-      border-bottom: $distance solid $primary;
-      border-right: $distance solid $primary;
+      background-image: url('../img/dots-texture.png');
       content: '';
-      height: calc(100% - #{$distance * 4});
-      left: 0;
+      height: 100%;
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 50%;
+    }
+
+    .post-date {
+      background-color: $black;
+      color: $white;
+      font-size: $fsmall;
+      line-height: $line-height;
+      padding: 0 $distance;
+
+      &::after {
+        content: '»';
+        margin-left: $distance / 2;
+      }
+    }
+
+    .post-title {
+      font-size: $fh0;
+      font-weight: $medium;
+      line-height: $line-height;
+      margin-left: 0;
+      width: calc(66.66% - #{$distance * 3});
+    }
+
+    .post-excerpt {
+      background-color: $white;
+      right: 0;
+      padding: $distance * 2;
       position: absolute;
       top: $distance * 3;
-      width: calc(100% - #{$distance * 5});
-    }
+      width: 33.33%;
+      z-index: 1;
 
-    // slash, date divider
-    &::after {
-      background-color: $black;
-      content: '';
-      bottom: calc(3.75rem + #{$distance * 3});
-      height: 1px;
-      position: absolute;
-      right: $distance * 6;
-      transform: rotate(-45deg);
-      width: 180px;
-    }
-
-    .mm,
-    .yy {
-      display: block;
-      position: absolute;
-    }
-
-    .mm {
-      bottom: calc(3.75rem + #{$distance * 4});
-      right: $distance * 16;
-    }
-
-    .yy {
-      bottom: $distance * 2;
-      right: $distance * 8;
+      &::after {
+        content: '...';
+        margin-left: $distance / 2;
+      }
     }
   }
 // -----------------------------------------------------------------------------
@@ -84,169 +65,12 @@
 // Cover Image
 // -----------------------------------------------------------------------------
   .main-header {
-    @include inline-block;
-    height: 40vh;
+    height: calc(100vh - #{$header-height + $distance * 6});
+    max-height: 760px;
     min-height: 500px;
-    padding: $distance * 3 $distance * 3 0 0;
-    position: relative;
-    width: 66.66%;
-
-    // Stripes background ------------------------------------------------------
-
-    &::before {
-      background-image: url('../img/stripes-texture.png');
-      background-position: top -7px left;
-      content: '';
-      height: 100%;
-      position: absolute;
-      right: -50%;
-      top: -50%;
-      transform: rotate(-45deg);
-      width: 100%;
-      z-index: -1;
-    }
-
-    // Color block hover -------------------------------------------------------
-    &::after {
-      background-color: $primary;
-      content: '';
-      height: 100%;
-      mix-blend-mode: multiply;
-      position: absolute;
-      right: -40%;
-      top: -7%;
-      transform: rotate(-45deg);
-      width: 100%;
-      z-index: 1;
-    }
-
-    .post-cover {
-      animation: blured-out .999s ease-out forwards; // Blur out animation
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: calc(40vh - #{$distance});
-      min-height: 500 - $distance * 3;
-      width: 100%;
-    }
-  }
-// -----------------------------------------------------------------------------
-
-
-// Page styles
-// -----------------------------------------------------------------------------
-  .site-wrapper {
-    margin: 0;
-    max-width: 100vw;
-    min-height: $post-height;
-    padding: 0;
-  }
-
-  .content {
-    animation: op-in .999s ease-out forwards; // Opacity In animation
-    max-width: $site-box;
-    padding-bottom: $distance * 5;
-    padding-top: $distance * 3;
-    position: relative;
-
-    > aside {
-      position: absolute;
-      right: 0;
-      top: $distance * 5;
-    }
-  }
-// -----------------------------------------------------------------------------
-
-
-// Thought Post style
-// -----------------------------------------------------------------------------
-  article {
-    @extend %thought;
-    margin-left: 0;
-    text-align: left;
-    width: 66.66%;
-
-    .post-header {
-      text-align: left;
-
-      .post-date {
-        background-color: $black;
-        color: $white;
-        font-size: $fsmall;
-        line-height: $line-height;
-        padding: 0 $distance;
-
-        &::after {
-          content: '»';
-          margin-left: $distance / 2;
-        }
-      }
-
-      .post-title {
-        font-size: $fh0;
-        font-weight: $medium;
-      }
-    }
-  }
-// -----------------------------------------------------------------------------
-
-
-// Post Footer
-// -----------------------------------------------------------------------------
-  .post-content + .post-footer {
-    margin-top: $distance * 3;
-  }
-
-  .author,
-  .share {
-    margin-top: $distance * 3;
+    position: static;
     width: 100%;
-  }
-
-// Author ----------------------------------------------------------------------
-  .author {
-    text-align: right;
-
-    .author-image {
-      @extend %auth-image;
-      @include inline-block;
-    }
-
-    .author-name {
-      @extend %auth-name;
-      @include inline-block;
-      text-align: left;
-    }
-  }
-// -----------------------------------------------------------------------------
-
-
-// Share -----------------------------------------------------------------------
-  .share {
-    text-align: right;
-
-    > span {
-      display: block;
-      font-size: $ftiny;
-      font-weight: $light;
-      line-height: $auth-image;
-      margin-right: $distance;
-
-      @include mq(mobile) {
-        display: block;
-        line-height: $auth-image / 2;
-      }
-    }
-
-    > a[class*='icon-'] { // scss-lint:disable QualifyingElement
-      @extend %social-icon;
-      margin-top: #{($auth-image - $icon) / 2};
-
-      @include mq(mobile) {
-        margin-top: 0;
-      }
-    }
+    z-index: -1;
   }
 // -----------------------------------------------------------------------------
 }
-// -----------------------------------------------------------------------------
